Ajout de Div dans les pages pour structurer le code

--- a/acceuil.html
+++ b/acceuil.html
@@ -9,7 +9,7 @@
 
 	
 	<body>
-		<div>
+	<div>
 		<ul>
 			<li><a href="acceuil.html" class="menu" >Acceuil</a></li>
 			<li><a id="prom" href="promo.html" class="menu">Promotions</a></li>
@@ -17,11 +17,13 @@
 			<li><a href="compte.html" class="menu">Mon Compte</a></li>
 			<li><a href="aprop.html" class="menu">A propos de Nous</a></li>
 		</ul>
-		</div>
-
+	</div>
+		
+	<div>
 		<h1> Bienvenue sur OnlineSk4teSh0p </h1>
 		
 			<p id="pacc"> Le site n°1 de vente de board et équipements dédiés au Skate </p>
+	</div>
 			
 		<section id="acceuil">
 	<div>
@@ -30,16 +32,16 @@
 	</div>
 	<div id="news">
 			<table>
-			<tr id="newsb">
-				<td id="logo"> <img id="aclogo" src="images/element.png"/> </td>
+			<tr class="newsb">
+				<td class="logo"> <img class="aclogo" src="images/element.png"/> </td>
 				<td> <p> La nouvelle collection Element enfin disponible, venez la retrouver dès maintenant dans notre boutique au prix les plus intéressants du marché ! </p> </td>
 			</tr>
-			<tr id="newsb">
-				<td id="logo"> <img id="aclogo" src="images/nikesb.png"/> </td>
+			<tr class="newsb">
+				<td class="logo"> <img class="aclogo" src="images/nikesb.png"/> </td>
 				<td> <p> Arrivage des dernières chaussures de Nike SB spécialement dédiées au Skate ! N'hésitez pas, on est en avance d'une semaine par rapport aux concurrents </p> </td>
 			</tr>
-			<tr id="newsb">
-				<td id="logo"> <img id="aclogo" src="images/planb.png"/> </td>
+			<tr class="newsb">
+				<td class="logo"> <img class="aclogo" src="images/planb.png"/> </td>
 				<td> <p> Les voici, les voilà, les board toutes fraichement sortie de chez Plan B, de la haute qualité, un design attirant, que du bon chez eux, foncez ! </p> </td>
 			</tr>
 	</div>
