--- a/aprop.html
+++ b/aprop.html
@@ -7,7 +7,7 @@
 		<title>OnlineSk4teSh0p - A propos</title>
 	</head>
 
-	
+	<div>
 	<body>
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
@@ -16,8 +16,12 @@
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
-		<h1 id="tapr"> A propos de nous </h1>
-			<section id="tab">
+	</div>
+	<div>
+		<h1> A propos de nous </h1>
+	</div>
+	<div>
+			<section class="tab">
 			<p> Nous sommes une équipe de jeunes passionnés de Skate depuis l'enfance, c'est pourquoi nous avons décidé il y a peu de lancer notre site. </p>
 			<p>Nous souhaitons proposer à nos clients les articles les plus récents et performants pour que vos sessions se déroulent le mieux possible.</p>
 			<p>Si vous souhaitez nous contacter pour des raisons commerciales, des questions concernant nos services, ou des partenariat, vous pouvez le faire par Facebook, Twitter, mail ou en nous contactant par téléphone</p>
@@ -36,5 +40,6 @@
 			</tr>
 			</table>
 			</section>
+		</div>
 	</body>
 </html>
