--- a/commande.html
+++ b/commande.html
@@ -10,11 +10,13 @@
 	
 	<body>
 
-
+	<div>
 		<h1> Passer la commande </h1>
-		
-		<section id="com">
-		<form id=paiement>
+	</div>
+	<div>
+		<section class="tab">
+		<form id=formulaire>
+			<div>
 			<fieldset>
 			<legend>Etape 1 : Votre identité</legend>
 
@@ -33,7 +35,9 @@
 					</li>
 				</ol>
 			</fieldset>
-
+			</div>
+			
+			<div>
 			<fieldset>
 			<legend>Etape 2 : Adresse de livraison</legend>
 				<ol>
@@ -51,6 +55,10 @@
 					</li>
 				</ol>
 			</fieldset>
+			</div>
+			
+
+			<div>
 			<fieldset>
 			<legend>Etape 3 : Informations CB</legend>
 				<ol>
@@ -72,6 +80,7 @@
 					</li>
 				</ol>
 			</fieldset>
+
 					</li>
 					<li>
 						<label for=numero_de_carte>N° de carte</label>
@@ -87,16 +96,22 @@
 					</li>
 				</ol>
 			</fieldset>
-
+			</div>
+			
+			<div>
 			<fieldset>
 					<a href="fincom.html"><button type=submit>J'achète !</button></a>
 			</fieldset>
+			</div>
 			
+			<div>
 			<fieldset>
 					<a href="acceuil.html"><button>Retour</button></a>
 			</fieldset>
+			</div>
 			</form>
 		</section>
+	</div>
 		
 			
 	</body>
