--- a/commentaire.html
+++ b/commentaire.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='images/skate.ico' rel='shortcut icon'/>
-		<title>OnlineSk4teSh0p - Article ajouté </title>
+		<title>OnlineSk4teSh0p - Rédaction du commentaire </title>
 	</head>
 
 	
@@ -18,15 +18,16 @@
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
 	</div>
-
-			<div>
+	<div>		
 			<section class="tab">
-			<div>
-			<p> L'article a correctement été ajouté à votre panier. </p>
-			<p><a href="panier.html"><button> Consulter le panier </button></a></p>
+			<p> Saisissez votre commentaire :  </p>
+
+						<textarea id=commentaire name=commentaire rows=10 required></textarea>
+
+
+			<p><a href="validcommentaire.html"><button> Poster votre commentaire </button></a></p>
 			<p><a href="acceuil.html"><button> Retour à l'acceuil </button></a></p>
-			</div>
 			</section>
-			</div>
+	</div>
 	</body>
 </html>
