--- a/donperso.html
+++ b/donperso.html
@@ -10,11 +10,14 @@
 	
 	<body>
 
-
+	<div>
 		<h1> Modifier vos informations </h1>
-		
-	<section id="com">
-		<form id=paiement>
+	</div>
+	
+	<div>	
+	<section class="donpers">
+		<form id=formulaire>
+		<div>
 			<fieldset>
 			<legend> Pseudo </legend>
 				<ol>
@@ -32,7 +35,8 @@
 					</li>
 				</ol>
 			</fieldset>
-
+		</div>
+		<div>
 			<fieldset>
 			<legend>Email</legend>
 				<ol>
@@ -54,7 +58,8 @@
 					</li>
 				</ol>
 			</fieldset>
-			
+		</div>
+		<div>
 			<fieldset>
 			<legend> Date de naisance </legend>
 				<ol>
@@ -72,6 +77,8 @@
 					</li>
 				</ol>
 			</fieldset>
+		</div>
+		<div>
 			<fieldset>
 			<legend> Sexe </legend>
 				<ol>
@@ -85,15 +92,20 @@
 				</select>
 				</li>
 			</fieldset>
+		</div>
+		<div>
 			<fieldset>
 					<a href="findonperso.html"><button type=submit>Mettre à jour mes informations</button></a>
 			</fieldset>
-			
+		</div>
+		<div>
 			<fieldset>
 					<a href="compte.html"><button>Retour</button></a>
 			</fieldset>
+		</div>
 			</form>
 		</section>
+	</div>
 		
 			
 	</body>
