--- a/fincom.html
+++ b/fincom.html
@@ -10,14 +10,16 @@
 	
 	<body>
 
-
+	<div>
 		<h1> Commande validée </h1>
-		
-		<section id="tab">
+	</div>
+	<div>
+		<section class="tab">
 			<p> Votre commande a été prise en compte, elle vous sera envoyée dans les plus bref délais.</p>
 			<p> Merci de votre fidélité ! </p>
 			<p><a href="acceuil.html"><button>Retour à l'acceuil</button></a> </p>
 		</section>
+	</div>
 		
 			
 	</body>
