--- a/findonperso.html
+++ b/findonperso.html
@@ -10,16 +10,17 @@
 	
 	<body>
 
-
+	<div>
 		<h1> Données mise à jour </h1>
-		
-		<section id="tab">
+	</div>
+	<div>
+		<section class="tab">
 			<p> Vos informations ont correctement été modifiées.</p>
 			<p> Nous vous souhaitons une bonne navigation sur notre site. </p>
 			<p><a href="compte.html"><button>Retour sur votre compte</button></a></p>
 			<p><a href="acceuil.html"><button>Retour à l'acceuil</button></a> </p>
 		</section>
-		
+	</div>	
 			
 	</body>
 </html>
