--- a/panier.html
+++ b/panier.html
@@ -8,7 +8,7 @@
 	</head>
 	
 	<body>
-	
+	<div>
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promotions</a></li>
@@ -16,19 +16,24 @@
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
-		
+	</div>
+	<div>
 		<h1> Votre Panier </h1>
-		
-		<section id="tab">
-			<table id="lint">
+	</div>
+	<div>
+		<section class="tab">
+		<div>
+			<table class="lint">
+			<div>
 			<tr>
-				<td id="int"> Produit </td>
-				<td id="int"> Taille </td>
-				<td id="int"> Quantité </td>
-				<td id="int"> Prix unitaire </td>
-				<td id="int"> Prix total </td>
+				<td class="int"> Produit </td>
+				<td class="int"> Taille </td>
+				<td class="int"> Quantité </td>
+				<td class="int"> Prix unitaire </td>
+				<td class="int"> Prix total </td>
 			</tr>
-			
+			</div>
+			<div>
 			<tr>
 				<td> <img class="pan" src="images/trash.png"/> </td>
 				<td> M </td>
@@ -36,7 +41,6 @@
 				<td> 33,60 € </td>
 				<td> 33,60 € </td>
 			</tr>
-
 			<tr>
 				<td> Sweat Trasher Noir </td>
 			</tr>
@@ -49,15 +53,21 @@
 			</tr>
 			<tr>
 				<td> T-shirt Element Blanc crème </td>
+			</tr>
 			</table>
-			
-			<table id="lint">	
+		</div>
+		<div>
+			<table class="lint">	
 			<tr>
 				<td> <span>Montant total : </span>63,40 €</td>
 			</tr>
 			</table>
+		</div>
+		<div>
 			<p> <a href="commande.html"><button>Passer votre commande</button></a> </p>
 			<p> <a href="acceuil.html"><button>Retour à l'acceuil</button></a>
+		</div>
 		</section>
+	</div>
 	</body>
 </html>
