--- a/promo.html
+++ b/promo.html
@@ -8,7 +8,7 @@
 	</head>
 	
 	<body>
-	
+	<div>
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promotions</a></li>
@@ -16,11 +16,16 @@
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
-		
+	</div>
+	<div>
 		<h1> Promotions du moment </h1>
-		
-		<section id="tab">
+	</div>
+	<div>
+		<section class="tab">
+		<div>
 		<p> Nos articles les plus commandés en promo dès maintenant, jusqu'à fin janvier ! </p>
+		</div>
+		<div>
 		<table>
 		<tr>
 			<td> <img class="cont2"  src="images/board.png"/> </td>
@@ -33,14 +38,14 @@
 			<td> 4 paires roues Element -50% </td>
 		</tr>
 		<tr>
-			<td id="ap"> 119,99 € </td>
-			<td id="ap"> 42 € </td>
-			<td id="ap"> 62,99 € </td>
+			<td class="ap"> 119,99 € </td>
+			<td class="ap"> 42 € </td>
+			<td class="ap"> 62,99 € </td>
 		</tr>
 		<tr>
-			<td id="np"> 71,99 € !</td>
-			<td id="np"> 33,60 € !</td>
-			<td id="np"> 31,45 € !</td>
+			<td class="np"> 71,99 € !</td>
+			<td class="np"> 33,60 € !</td>
+			<td class="np"> 31,45 € !</td>
 		</tr>
 		<tr>
 			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
@@ -50,6 +55,8 @@
 		</tr>
 		
 		</table>
+		</div>
+		<div>
 		<table>
 		<tr>
 			<td> <img class="cont" src="images/wax.png"/> </td>
@@ -62,14 +69,14 @@
 			<td> Roulements Abec 5 Independent -40% </td>
 		</tr>
 		<tr>
-			<td id="ap"> 12,50 € </td>
-			<td id="ap"> 24,90 € </td>
-			<td id="ap"> 16 € </td>
+			<td class="ap"> 12,50 € </td>
+			<td class="ap"> 24,90 € </td>
+			<td class="ap"> 16 € </td>
 		</tr>
 		<tr>
-			<td id="np"> 8,75 € !</td>
-			<td id="np"> 19,92 € !</td>
-			<td id="np"> 9,60 € ! </td>
+			<td class="np"> 8,75 € !</td>
+			<td class="np"> 19,92 € !</td>
+			<td class="np"> 9,60 € ! </td>
 		</tr>
 		<tr>
 			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
@@ -77,7 +84,9 @@
 			<td> <a href="validpanier.html"><button> Ajouter au panier </button></a> </td>
 		</tr>
 		</table>
-		
+		</section>
+		</div>
+	</div>
 
 	</body>
 	
