--- a/skate.html
+++ b/skate.html
@@ -9,7 +9,7 @@
 
 	
 	<body>
-	
+	<div>
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promotions</a></li>
@@ -17,12 +17,17 @@
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Trouvez la Board de vos rêves </h1>
-			<section id="tab">
+	</div>
+	<div>
+			<section class="tab">
+			<div>
 			<table>
 				<tr>
-					<td> <img class="cont2" src="images/skateplat.png"/> </td>
-					<td> <img class="cont2" src="images/skatecomp.png"/> </td>
+					<td> <img class="contgrand" src="images/skateplat.png"/> </td>
+					<td> <img class="contgrand" src="images/skatecomp.png"/> </td>
 					<td> <img class="cont" src="images/skatetruc.png"/> </td>
 				</tr>
 				<tr>
@@ -38,10 +43,12 @@
 				</tr>
 		
 			</table>
+			</div>
+			<div>
 			<table>
 				<tr>
 					<td> <img class="cont"  src="images/skateroue.png"/> </td>
-					<td> <img class="cont2" src="images/skategrip.jpg"/> </td>
+					<td> <img class="contgrand" src="images/skategrip.jpg"/> </td>
 					<td> <img class="cont"  src="images/skateroul.png"/> </td>
 				</tr>
 				<tr>
@@ -55,8 +62,11 @@
 					<td> <a href="skate/roulement.html"><button> Parcourir le catalogue </button></a> </td>
 				</tr>
 			</table>
+			</div>
+			<div>
 			<p><a href="acceuil.html"><button> Retour </button></a></p>
+			</div>
 			</section>
-		
+	</div>
 	</body>
 </html>
