--- a/skate/grips/grizzly.html
+++ b/skate/grips/grizzly.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,54 +17,66 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapetit" src="../../images/grizzly.png"/> </td>
-					<td id="art"> <p id="int"> Grizzly </p>
-					<p id="detail">  Un grip sobre arborant le logo de la marque Grizzly, parfait pour supporter votre marque favorite !</p> </td>
+					<td class="art"> <img class="contapetit" src="../../images/grizzly.png"/> </td>
+					<td class="art"> <p class="int"> Grizzly </p>
+					<p class="detail">  Un grip sobre arborant le logo de la marque Grizzly, parfait pour supporter votre marque favorite !</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 18 € </td>	
+					<td class="art"> 18 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Unique"> Unique </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../grip.html"><button> Retour aux Grips </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1422 </p> </td>
 				<td> <p> Un grip, bah c'est un grip, rien qui change niveau qualité, c'est surtout du design, et j'avoue que celui si est plutôt joli, je recommence aux fans ! </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 9999 </p> </td>
 				<td> <p> Un peu trop simple à mon gout pour représenter Grizzly, mais cela suffit aux plus simplistes ! </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
