--- a/validcommentaire.html
+++ b/validcommentaire.html
@@ -22,8 +22,7 @@
 			<div>
 			<section class="tab">
 			<div>
-			<p> L'article a correctement été ajouté à votre panier. </p>
-			<p><a href="panier.html"><button> Consulter le panier </button></a></p>
+			<p> Votre commentaire a bien été publié.</p>
 			<p><a href="acceuil.html"><button> Retour à l'acceuil </button></a></p>
 			</div>
 			</section>
