--- a/vet.html
+++ b/vet.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promotions</a></li>
@@ -16,12 +17,16 @@
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Les vêtements parfait pour vos sessions </h1>
-			
-			<section id="tab">
+	</div>
+		<div>
+			<section class="tab">
+			<div>
 			<table>
 				<tr>
-					<td> <img class="cont2" src="images/vetpant.png"/> </td>
+					<td> <img class="contgrand" src="images/vetpant.png"/> </td>
 					<td> <img class="cont" src="images/vetsweat.png"/> </td>
 					<td> <img class="cont" src="images/vetshirt.png"/> </td>
 				</tr>
@@ -38,6 +43,8 @@
 				</tr>
 		
 			</table>
+			</div>
+			<div>
 			<table>
 				<tr>
 					<td> <img class="cont" src="images/vetchaus.png"/> </td>
@@ -55,7 +62,11 @@
 					<td> <a href="vetement/chemise.html"><button> Parcourir le catalogue </button></a> </td>
 				</tr>
 			</table>
+			</div>
+			<div>
 			<p><a href="acceuil.html"><button> Retour </button></a></p>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
