--- a/vetement/chemises/legiongris.html
+++ b/vetement/chemises/legiongris.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,55 +17,68 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/legiongris.png"/> </td>
-					<td id="art"> <p id="int"> Legion Gris </p>
-					<p id="detail"> Faire aussi bien que possible: vous en avez l'assurance dès que vous voyez un logo Element.Qualité et style street authentique sont toujours de rigueur. Comme sur cette chemise Legion au look clean et classique en chambray, aussi appréciée par la classe ouvrière que la classe supérieure. Fabriqué en coton épais et durable, qui ne s'épuisera ni en skate ni au travail. </p> </td>
+					<td class="art"> <img class="conta" src="../../images/legiongris.png"/> </td>
+					<td class="art"> <p class="int"> Legion Gris </p>
+					<p class="detail"> Faire aussi bien que possible: vous en avez l'assurance dès que vous voyez un logo Element.Qualité et style street authentique sont toujours de rigueur. Comme sur cette chemise Legion au look clean et classique en chambray, aussi appréciée par la classe ouvrière que la classe supérieure. Fabriqué en coton épais et durable, qui ne s'épuisera ni en skate ni au travail. </p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 60 € </td>
+					<td class="art"> 60 € </td>
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../chemise.html"><button> Retour aux chemises </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1501 </p> </td>
 				<td> <p> Elegante, classique et agréable à porter, j'en suis ravi ! Je conseil fortement :) </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 2503 </p> </td>
 				<td> <p> Une chemise classique, douce, jolie, que du plus pour l'instant ! Attention au lavage quand même !  </p> </td>
 			</tr>
 			</div>
+			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
