--- a/vetement/pantalons/fieldbeige.html
+++ b/vetement/pantalons/fieldbeige.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,57 +17,69 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapant" src="../../images/fieldbeige.png"/> </td>
-					<td id="art"> <p id="int"> 92Field Beige</p>
-					<p id="detail">Le 92Field est conçu avec les points de style chino classiques que vous connaissez si bien. Conçu dans un tissu haut de gamme de coton qui a été choisi pour sa sensation confortable et des vêtements durables. Inclut des poches de côté, une arrière poche de zébrure au dos, une poche de volet au dos et une pièce de logo en cuir.</p> </td>
+					<td class="art"> <img class="contapant" src="../../images/fieldbeige.png"/> </td>
+					<td class="art"> <p class="int"> 92Field Beige</p>
+					<p class="detail">Le 92Field est conçu avec les points de style chino classiques que vous connaissez si bien. Conçu dans un tissu haut de gamme de coton qui a été choisi pour sa sensation confortable et des vêtements durables. Inclut des poches de côté, une arrière poche de zébrure au dos, une poche de volet au dos et une pièce de logo en cuir.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 65 € </td>	
+					<td class="art"> 65 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../pantalon.html"><button> Retour aux Pantalons </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 2415 </p> </td>
 				<td> <p> On pourrait croire en apparence que ce chino se destine plutôt à un usage printemps-été, et pourtant ce n'est pas le cas, il est très agréable en températures basses et tient un minimum chaud.</p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 0045 </p> </td>
 				<td> <p> J'ai hésité longtemps avant de l'acheter, et au final, un bon achat, portable n'importe quand, pluie, soleil, été, hiver, classe en toute circonstance. </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
