--- a/vetement/tshirts/gradientbleu.html
+++ b/vetement/tshirts/gradientbleu.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,57 +17,69 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/gradientbleu.png"/> </td>
-					<td id="art"> <p id="int"> Gradient Bleu </p>
-					<p id="detail"> S'harmoniser est surestimé. Ajoutez un coup sec de couleur avec ce tee-shirt de logo Element. Un confort maximal et un t-shirt 100% coton qui permet une douceur exquise.</p> </td>
+					<td class="art"> <img class="conta" src="../../images/gradientbleu.png"/> </td>
+					<td class="art"> <p class="int"> Gradient Bleu </p>
+					<p class="detail"> S'harmoniser est surestimé. Ajoutez un coup sec de couleur avec ce tee-shirt de logo Element. Un confort maximal et un t-shirt 100% coton qui permet une douceur exquise.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 25 € </td>	
+					<td class="art"> 25 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../tshirt.html"><button> Retour aux T-Shirts </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 5721 </p> </td>
 				<td> <p> Un t-shirt banal, mais aux couleurs explosives, super modèle ! </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 9124 </p> </td>
 				<td> <p> Sympa, sans plus. J'ai été plus surpris de la marque auparavant. </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
