--- a/vetement/vestes/alterjonesgris.html
+++ b/vetement/vestes/alterjonesgris.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,57 +17,69 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/alterjonesgris.png"/> </td>
-					<td id="art"> <p id="int"> Alter Jones Gris </p>
-					<p id="detail"> Flotter quelques lignes modernes au dessus des autres veste, avec ce kit : deux-tons / coupe-vent. Une veste portable en toute saison, l' Alder offre une résistance aux intempéries dans un boîtier léger, prêt pour la route. </p> </td>
+					<td class="art"> <img class="conta" src="../../images/alterjonesgris.png"/> </td>
+					<td class="art"> <p class="int"> Alter Jones Gris </p>
+					<p class="detail"> Flotter quelques lignes modernes au dessus des autres veste, avec ce kit : deux-tons / coupe-vent. Une veste portable en toute saison, l' Alder offre une résistance aux intempéries dans un boîtier léger, prêt pour la route. </p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 110 € </td>	
+					<td class="art"> 110 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../veste.html"><button> Retour aux vestes </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 0124 </p> </td>
 				<td> <p> Un motif intéressant, une couleur simple : un atout de choix pour se fondre dans la masse en beauté ! </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 6251 </p> </td>
 				<td> <p> Un peu déçu car elle ne tient pas aussi chaud que prévu, mais ravi de l'avoir, je suis souvent complimenté par mes amis.</p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
