--- a/compte.html
+++ b/compte.html
@@ -9,7 +9,7 @@
 
 	
 	<body>
-
+	<div>
 		<ul>
 			<li><a href="acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="promo.html">Promotions</a></li>
@@ -17,20 +17,25 @@
 			<li><a href="compte.html">Mon Compte</a></li>
 			<li><a href="aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
 
-
+	<div>
 		<h1> Mon Compte </h1>
+	</div>
+	
+	<div>
 		
-		<section id="tab">
+		<section class="tab">
 			<p> Bienvenue sur votre compte, vous pouvez ici personnaliser votre profil ainsi que vos paramètres personnels. </p>
 			<img id="uti" src="images/uti.png"/> 
-			<p> <span id="int"> Nom d'utilisateur : </span> IUT-2016 </p>
-			<p> <span id="int"> Âge : </span> 18 ans </p>
-			<p> <span id="int"> Date de Naissance : </span> 28/10/1997 </p>
-			<p> <span id="int"> Sexe : </span> Homme </p>
-			<p> <span id="int"> Email : </span> iut-2016@univ-lyon1.fr </p>
+			<p> <span class="int"> Nom d'utilisateur : </span> IUT-2016 </p>
+			<p> <span class="int"> Âge : </span> 18 ans </p>
+			<p> <span class="int"> Date de Naissance : </span> 28/10/1997 </p>
+			<p> <span class="int"> Sexe : </span> Homme </p>
+			<p> <span class="int"> Email : </span> iut-2016@univ-lyon1.fr </p>
 			<p> <a href="donperso.html"><button> Modifier vos données personnelles </button></a>	 </p>
 		</section>
+	</div>
 		
 			
 	</body>
