--- a/skate/roues/section.html
+++ b/skate/roues/section.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,54 +17,66 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapetit" src="../../images/section.png"/> </td>
-					<td id="art"> <p id="int"> Section 54mm </p>
-					<p id="detail">  Les roues Element Section 54mm sont adaptés à tout type de terrain et permettent un confort exceptionnel.</p> </td>
+					<td class="art"> <img class="contapetit" src="../../images/section.png"/> </td>
+					<td class="art"> <p class="int"> Section 54mm </p>
+					<p class="detail">  Les roues Element Section 54mm sont adaptés à tout type de terrain et permettent un confort exceptionnel.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 27 € </td>	
+					<td class="art"> 27 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Unique"> Unique </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../roue.html"><button> Retour aux Roues </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 4215 </p> </td>
 				<td> <p> Des roues de qualités adaptés au street comme au parc, le format 52mm est vraiment adapté à tout. Pas de doute sur l'achat. </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 0222 </p> </td>
 				<td> <p> Un lot de roues vachement intéressant, autant au niveau du design qu'au niveau de la qualité du produit, pas du tout déçu ! </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
