--- a/skate/roulement.html
+++ b/skate/roulement.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../promo.html">Promotions</a></li>
@@ -16,14 +17,18 @@
 			<li><a href="../compte.html">Mon Compte</a></li>
 			<li><a href="../aprop.html">A propos de Nous</a></li>
 		</ul>
-		<h1>  </h1>
-			
-			<section id="tab">
+	</div>
+	<div>
+		<h1> Nos Roulements </h1>
+	</div>
+		<div>
+			<section class="tab">
+			<div>
 			<table>
 				<tr>
-					<td> <img class="conta" id="contapetit" src="../images/diamond.png"/> </td>
-					<td> <img class="conta" id="contapetit"	src="../images/lucky.png"/> </td>
-					<td> <img class="conta" id="contapetit" src="../images/enjoi.png"/> </td>
+					<td> <img class="contapetit" src="../images/diamond.png"/> </td>
+					<td> <img class="contapetit"	src="../images/lucky.png"/> </td>
+					<td> <img class="contapetit" src="../images/enjoi.png"/> </td>
 				</tr>
 				<tr>
 					<td> Diamond ABEC 3</td>
@@ -43,8 +48,12 @@
 				</tr>
 		
 			</table>
+			</div>
+			<div>
 			<p><a href="../skate.html"><button> Retour aux catégories </button></a></p>
 			<p><a href="../acceuil.html"><button> Retour à l'acceuil </button></a></p>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
