--- a/skate/roulements/diamond.html
+++ b/skate/roulements/diamond.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,54 +17,66 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapetit" src="../../images/diamond.png"/> </td>
-					<td id="art"> <p id="int"> Diamond ABEC 3 </p>
-					<p id="detail">  Les Diamond ABEC 3 sont parfaitements adaptés pour vos sessions en park, n'hésitez pas une seconde si vous êtes un fana du park.</p> </td>
+					<td class="art"> <img class="contapetit" src="../../images/diamond.png"/> </td>
+					<td class="art"> <p class="int"> Diamond ABEC 3 </p>
+					<p class="detail">  Les Diamond ABEC 3 sont parfaitements adaptés pour vos sessions en park, n'hésitez pas une seconde si vous êtes un fana du park.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 23 € </td>	
+					<td class="art"> 23 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Unique"> Unique </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../roulement.html"><button> Retour aux Roulements </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 4511 </p> </td>
 				<td> <p> Je confirme, résistant, adaptés au park ! Mais surtout pas en street, vous les abimerez beaucoup trop vite. </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 6423 </p> </td>
 				<td> <p> J'ai fais l'erreur de faire trop de street avec, ils ont pas tenus longtemps ! Contentez vous du park si vous souhaitez rouler en ABEC 3. </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
