--- a/skate/roulements/enjoi.html
+++ b/skate/roulements/enjoi.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,54 +17,66 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>	
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapetit" src="../../images/Enjoi.png"/> </td>
-					<td id="art"> <p id="int"> Enjoi ABEC 7 </p>
-					<p id="detail">  Les Enjoi ABEC 7 permettent de meler park et street, un choix parfait si vous souhaitez pouvoir slalomer entre les deux sans soucis !</p> </td>
+					<td class="art"> <img class="contapetit" src="../../images/Enjoi.png"/> </td>
+					<td class="art"> <p class="int"> Enjoi ABEC 7 </p>
+					<p class="detail">  Les Enjoi ABEC 7 permettent de meler park et street, un choix parfait si vous souhaitez pouvoir slalomer entre les deux sans soucis !</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 27 € </td>	
+					<td class="art"> 27 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Unique"> Unique </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../roulement.html"><button> Retour aux Roulements </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 5565 </p> </td>
 				<td> <p> J'ai jamais vraiment su me décider entre park et street, et j'ai opté pour du ABEC 7, vraiment pas déçu ! Hésitez pas si vous êtes dans mon cas. </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1000 </p> </td>
 				<td> <p> Un choix parfait pour les personnes qui aiment changer d'endroit ! </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
