--- a/skate/skatecs/nyjahb.html
+++ b/skate/skatecs/nyjahb.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,25 +17,31 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contagros" src="../../images/nyjahb.png"/> </td>
-					<td id="art"> <p id="int"> Nyjah Block </p>
-					<p id="detail">  Si vous êtes un débutant ou un rider plus avancé, vous allez aimer la façon dont vous allez rouler ! L'Element pack composé d'élements complet permet de ne pas vous embêter à la recherche de parties par vous-même.</p> </td>
+					<td class="art"> <img class="contagros" src="../../images/nyjahb.png"/> </td>
+					<td class="art"> <p class="int"> Nyjah Block </p>
+					<p class="detail">  Si vous êtes un débutant ou un rider plus avancé, vous allez aimer la façon dont vous allez rouler ! L'Element pack composé d'élements complet permet de ne pas vous embêter à la recherche de parties par vous-même.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 110 € </td>	
+					<td class="art"> 110 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="7.7"> 7.7 </option>
 					<option value="7.8"> 7.8 </option>
 					<option value="7.9"> 7.9 </option>
@@ -44,33 +51,39 @@
 					<option value="8.3"> 8.3 </option>
 					<option value="8.4"> 8.4 </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../skatec.html"><button> Retour aux Skates Complet </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 5572 </p> </td>
 				<td> <p> Un pack idéal pour commencer ou pour les vétérans, des supers composants ! </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1165 </p> </td>
 				<td> <p> Après plusieurs mois d'utilisations, je suis ravi de mon achat, la planche est résistante, souple, et me permet de progresser sans soucis !</p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
