--- a/skate/trucks/indepent.html
+++ b/skate/trucks/indepent.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,25 +17,31 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapetit" src="../../images/indepent.png"/> </td>
-					<td id="art"> <p id="int"> Independent Oxblood </p>
-					<p id="detail">  Les trucks Independant Oxblood ont été créer pour le street, une résistance exceptionnel mélant souplesse et force. Le choix parfait pour s'éclater en street !</p> </td>
+					<td class="art"> <img class="contapetit" src="../../images/indepent.png"/> </td>
+					<td class="art"> <p class="int"> Independent Oxblood </p>
+					<p class="detail">  Les trucks Independant Oxblood ont été créer pour le street, une résistance exceptionnel mélant souplesse et force. Le choix parfait pour s'éclater en street !</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 79 € </td>	
+					<td class="art"> 79 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="5.0"> 5.0 </option>
 					<option value="5.1"> 5.1 </option>
 					<option value="5.2"> 5.2 </option>
@@ -42,33 +49,39 @@
 					<option value="5.4"> 5.4 </option>
 					<option value="5.5"> 5.5 </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../truck.html"><button> Retour aux Trucks </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 8522 </p> </td>
 				<td> <p> Une couleur métallique sanglante, de la résistance, un très bon choix. </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1477 </p> </td>
 				<td> <p> Quelques remarques sur la détérioration des couleurs mais un très bon truck, je recommande ! </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
