--- a/skate/trucks/thunder.html
+++ b/skate/trucks/thunder.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,25 +17,31 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapetit" src="../../images/thunder.png"/> </td>
-					<td id="art"> <p id="int"> Thunder Mainliner </p>
-					<p id="detail"> Les trucks Mainliner vous garantiront une vitesse digne d'un éclair. Un combo de résistance et de puissance parfait pour le park ! </p> </td>
+					<td class="art"> <img class="contapetit" src="../../images/thunder.png"/> </td>
+					<td class="art"> <p class="int"> Thunder Mainliner </p>
+					<p class="detail"> Les trucks Mainliner vous garantiront une vitesse digne d'un éclair. Un combo de résistance et de puissance parfait pour le park ! </p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 79 € </td>	
+					<td class="art"> 79 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="5.0"> 5.0 </option>
 					<option value="5.1"> 5.1 </option>
 					<option value="5.2"> 5.2 </option>
@@ -42,33 +49,39 @@
 					<option value="5.4"> 5.4 </option>
 					<option value="5.5"> 5.5 </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../truck.html"><button> Retour aux Trucks </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 8775 </p> </td>
 				<td> <p> Je me suis jamais aussi éclaté en park ! Un pur régal, une prise des rampes parfaites, une adhérence géniale ! </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1444 </p> </td>
 				<td> <p> Super pour le park, un peu moins pour le street, dommage ! Mais un bon achat quand même, à privilégier aux fana de park.</p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
