--- a/skate/trucks/venture.html
+++ b/skate/trucks/venture.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,25 +17,31 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapetit" src="../../images/venture.png"/> </td>
-					<td id="art"> <p id="int"> Venture Rasta </p>
-					<p id="detail">  Les trucks Venture Rasta mèlent résistance, puissance, détente et couleur. Un mélange parfait pour rendre vos board colorées.</p> </td>
+					<td class="art"> <img class="contapetit" src="../../images/venture.png"/> </td>
+					<td class="art"> <p class="int"> Venture Rasta </p>
+					<p class="detail">  Les trucks Venture Rasta mèlent résistance, puissance, détente et couleur. Un mélange parfait pour rendre vos board colorées.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 56 € </td>	
+					<td class="art"> 56 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="5.0"> 5.0 </option>
 					<option value="5.1"> 5.1 </option>
 					<option value="5.2"> 5.2 </option>
@@ -42,33 +49,39 @@
 					<option value="5.4"> 5.4 </option>
 					<option value="5.5"> 5.5 </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../truck.html"><button> Retour aux Trucks </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 8999 </p> </td>
 				<td> <p> Des trucks résistants et colorés, ravi de l'achat pour les planche les plus loufoques. </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1222 </p> </td>
 				<td> <p> Les trucks sont beau, une touche de couleur sur une board sombre qui peut sauver le style.</p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
