--- a/vetement/chaussures/bannockbeige.html
+++ b/vetement/chaussures/bannockbeige.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,57 +17,68 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/bannockbeige.png"/> </td>
-					<td id="art"> <p id="int"> Bannock Beige </p>
-					<p id="detail"> Les Chaussures Bannock Lo de Element dispose d'une construction de ciment froid, textile et cuir suédé, lacets en coton ciré et col rembourré chanvre pressé semelle.</p> </td>
+					<td class="art"> <img class="conta" src="../../images/bannockbeige.png"/> </td>
+					<td class="art"> <p class="int"> Bannock Beige </p>
+					<p class="detail"> Les Chaussures Bannock Lo de Element dispose d'une construction de ciment froid, textile et cuir suédé, lacets en coton ciré et col rembourré chanvre pressé semelle.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 90 € </td>	
+					<td class="art"> 90 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="38-39"> 38-39 </option>
 					<option value="40-41"> 40-41 </option>
 					<option value="42-43"> 42-43 </option>
 					<option value="44+"> 44+ </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../chaussure.html"><button> Retour aux chaussures </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1854 </p> </td>
 				<td> <p> Agréable à porter, parfaite pour la saison printemps-été </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 9852 </p> </td>
 				<td> <p> Sûrement pas destinées à un usage hivernale, ces chaussures sont cependant très classes et agréables.</p> </td>
-			</tr id="comart">
-
+			</tr>
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
