--- a/vetement/chaussures/topaznoir.html
+++ b/vetement/chaussures/topaznoir.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,57 +17,69 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/topaznoir.png"/> </td>
-					<td id="art"> <p id="int"> Topaz Noir </p>
-					<p id="detail"> Meilleur ajustement, forte adhérence, confort et un meilleur contrôle. Les Topaz C3 combine les meilleurs éléments de conception innovante pour créer une chaussure de skate qui excelle à la puissance et la performance. Toutes les chaussures Element présentent le montage Strobel qui s'inspire des chaussures de course performantes. Cela crée une plus grande flexibilité et une meilleure réaction. </p> </td>
+					<td class="art"> <img class="conta" src="../../images/topaznoir.png"/> </td>
+					<td class="art"> <p class="int"> Topaz Noir </p>
+					<p class="detail"> Meilleur ajustement, forte adhérence, confort et un meilleur contrôle. Les Topaz C3 combine les meilleurs éléments de conception innovante pour créer une chaussure de skate qui excelle à la puissance et la performance. Toutes les chaussures Element présentent le montage Strobel qui s'inspire des chaussures de course performantes. Cela crée une plus grande flexibilité et une meilleure réaction. </p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 70 € </td>	
+					<td class="art"> 70 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="38-39"> 38-39 </option>
 					<option value="40-41"> 40-41 </option>
 					<option value="42-43"> 42-43 </option>
 					<option value="44+"> 44+ </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../chaussure.html"><button> Retour aux chaussures </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 2475 </p> </td>
 				<td> <p> Des sessions excellentes avec ces chaussures, je recommande aux skateurs !  </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 3425 </p> </td>
 				<td> <p> Une couleur qui ne tient pas sur le grip, décolore vite, mais super résistante ! </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
