--- a/vetement/chemises/loganbleu.html
+++ b/vetement/chemises/loganbleu.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,56 +17,69 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/loganbleu.png"/> </td>
-					<td id="art"> <p id="int"> Logan Bleu </p>
-					<p id="detail"> L'innovation n'est pas un mot que l'on prend à la légère. Alors quand vous voyez que l'innovation est omniprésent dans la description des produits Element, vous comprenez qu'il est à la base de notre réflexion. La chemise tissée Logan combine un damier contemporain avec le look classique d'une silhouette sur mesure. On note la poche pectorale avec logo tissé, et le fin toucher d'une popeline de grande qualité. </p> </td>
+					<td class="art"> <img class="conta" src="../../images/loganbleu.png"/> </td>
+					<td class="art"> <p class="int"> Logan Bleu </p>
+					<p class="detail"> L'innovation n'est pas un mot que l'on prend à la légère. Alors quand vous voyez que l'innovation est omniprésent dans la description des produits Element, vous comprenez qu'il est à la base de notre réflexion. La chemise tissée Logan combine un damier contemporain avec le look classique d'une silhouette sur mesure. On note la poche pectorale avec logo tissé, et le fin toucher d'une popeline de grande qualité. </p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 50 € </td>	
+					<td class="art"> 50 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../chemise.html"><button> Retour aux chemises </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 8251 </p> </td>
 				<td> <p> Chemise classique, confortable, esthétique, un vrai plaisir ! </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1234 </p> </td>
 				<td> <p> Légèrement onéreuse pour sa simplicité mais un vrai régal lors de son port, j'admire la marque pour la qualité ! </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
+			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
