--- a/vetement/chemises/standerorange.html
+++ b/vetement/chemises/standerorange.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,55 +17,68 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/standerorange.png"/> </td>
-					<td id="art"> <p id="int"> Stander Orange </p>
-					<p id="detail"> Il y a ceux qui osent rêver, et ceux qui osent transformer leurs rêves en réalité. Et nous pouvons assurer que la qualité de flanelle qui orne cette Stander, ainsi que sa construction et son style street authentique, en font un article 100% unique. Avec sa capuche en molleton, la Stander sera un compagnion de tous les temps, au toucher doux et à la durabilité exceptionnelle. </p> </td>
+					<td class="art"> <img class="conta" src="../../images/standerorange.png"/> </td>
+					<td class="art"> <p class="int"> Stander Orange </p>
+					<p class="detail"> Il y a ceux qui osent rêver, et ceux qui osent transformer leurs rêves en réalité. Et nous pouvons assurer que la qualité de flanelle qui orne cette Stander, ainsi que sa construction et son style street authentique, en font un article 100% unique. Avec sa capuche en molleton, la Stander sera un compagnion de tous les temps, au toucher doux et à la durabilité exceptionnelle. </p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 70 € </td>
+					<td class="art"> 70 € </td>
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../chemise.html"><button> Retour aux chemises </button></a></p>
-			<div id="imart">
+			</div>
+			
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 4205 </p> </td>
 				<td> <p> Original ! La capuche peut surprendre mais on s'y fait rapidement et ce n'est pas si dérangeant pour l'oeil, je recommande. </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 3521 </p> </td>
 				<td> <p> Un peu déçu du produit, rapidement abimé, on s'y fait bien pourtant. Il faut y faire attention  </p> </td>
-			</tr id="comart">
+			</tr>
 			</div>
+			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
 	</body>
 </html>
