--- a/vetement/pantalons/mesagris.html
+++ b/vetement/pantalons/mesagris.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,58 +17,70 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" id="contapant" src="../../images/mesagris.png"/> </td>
-					<td id="art"> <p id="int"> Mesa Gris</p>
-					<p id="detail">À la conception du jogging Mesa, vous avons voulu qu'il puisse assurer dans un environnement naturel tout comme dans une ambiance plus urbaine. Affichant notre coupe fuselée slim, le Mesa monte jusqu'à la taille, est slim au niveau de l'assise et des cuisses et présente une jambe fuselée qui se termine par un bas de pantalon élastique.
+					<td class="art"> <img class="contapant" src="../../images/mesagris.png"/> </td>
+					<td class="art"> <p class="int"> Mesa Gris</p>
+					<p class="detail">À la conception du jogging Mesa, vous avons voulu qu'il puisse assurer dans un environnement naturel tout comme dans une ambiance plus urbaine. Affichant notre coupe fuselée slim, le Mesa monte jusqu'à la taille, est slim au niveau de l'assise et des cuisses et présente une jambe fuselée qui se termine par un bas de pantalon élastique.
 </p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 60 € </td>	
+					<td class="art"> 60 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../pantalon.html"><button> Retour aux Pantalons </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 7413 </p> </td>
 				<td> <p> De loin le jogging le plus agréable que j'ai jamais porter ! Achetez le vite !</p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 2596 </p> </td>
 				<td> <p> Il est banal mais il a fait ses preuves, pluie, sport, détente, un vrai bonheur. </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
