--- a/vetement/sweats/bronsonblanc.html
+++ b/vetement/sweats/bronsonblanc.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,57 +17,69 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/bronsonblanc.png"/> </td>
-					<td id="art"> <p id="int"> Bronson Blanc </p>
-					<p id="detail"> Ambiance majeure de bambou. Cette toison(polaire) chaude de coton figure un tonal inspiré par bambou impriment sur toute la surface . La marque d'Élément Subtile garde le classique de choses.</p> </td>
+					<td class="art"> <img class="conta" src="../../images/bronsonblanc.png"/> </td>
+					<td class="art"> <p class="int"> Bronson Blanc </p>
+					<p class="detail"> Ambiance majeure de bambou. Cette toison(polaire) chaude de coton figure un tonal inspiré par bambou impriment sur toute la surface . La marque d'Élément Subtile garde le classique de choses.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 70 € </td>	
+					<td class="art"> 70 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../sweat.html"><button> Retour aux Sweats </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 1576 </p> </td>
 				<td> <p> Totalement fan, un style original qui m'attire beaucoup ! </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 9421 </p> </td>
 				<td> <p> Tellement beau ce sweat, j'en suis amoureux ! Dans le panier direction l'achat !  </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
