--- a/vetement/vestes/dulceyvert.html
+++ b/vetement/vestes/dulceyvert.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,57 +17,69 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/dulceyvert.png"/> </td>
-					<td id="art"> <p id="int"> Dulcey Vert </p>
-					<p id="detail"> La Dulcey fait partie de notre collection Wolfeboro exclusive. Chaque pièce de cette gamme est en série limitée et présente des attributs classiques du style Element, fusionnés dans une fabrication, une construction et une qualité très solides. Cette veste en toile apporte un touche de fraîcheur au mélange avec sa doublure en flanelle et ses touches de cuir.</p> </td>
+					<td class="art"> <img class="conta" src="../../images/dulceyvert.png"/> </td>
+					<td class="art"> <p class="int"> Dulcey Vert </p>
+					<p class="detail"> La Dulcey fait partie de notre collection Wolfeboro exclusive. Chaque pièce de cette gamme est en série limitée et présente des attributs classiques du style Element, fusionnés dans une fabrication, une construction et une qualité très solides. Cette veste en toile apporte un touche de fraîcheur au mélange avec sa doublure en flanelle et ses touches de cuir.</p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 135 € </td>	
+					<td class="art"> 135 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../veste.html"><button> Retour aux vestes </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 4186 </p> </td>
 				<td> <p> Longtemps que je n'avais pas été charmé par un vêtement vert ! Une vraie surprise, ravi de l'achat. </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 7124 </p> </td>
 				<td> <p> Une couleur qui peut paraître triste mais pas tant que ca, couplé à un confort exceptionnel, un achat totalement validé.</p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
