--- a/vetement/vestes/hemlockkaki.html
+++ b/vetement/vestes/hemlockkaki.html
@@ -9,6 +9,7 @@
 
 	
 	<body>
+	<div>
 		<ul>
 			<li><a href="../../acceuil.html">Acceuil</a></li>
 			<li><a id="prom" href="../../promo.html">Promotions</a></li>
@@ -16,57 +17,69 @@
 			<li><a href="../../compte.html">Mon Compte</a></li>
 			<li><a href="../../aprop.html">A propos de Nous</a></li>
 		</ul>
+	</div>
+	<div>
 		<h1> Détail </h1>
-			
-			<section id="article">
+	</div>
+		<div>
+			<section class="article">
+			<div>
 			<table>
 				<tr>
-					<td id="art"> <img class="conta" src="../../images/hemlockkaki.png"/> </td>
-					<td id="art"> <p id="int"> Hemlock Kaki </p>
-					<p id="detail"> Une pièce utilitaire pour l'amateur de plein air, l'aventurier - lié, le toujours préparé. Un revêtement luttant parfaitement contre la météo et des poches utiles donnant à cette veste un charme particulier. Sa doublure en coton vous maintiendra au chaud malgré les températures les plus basses. </p> </td>
+					<td class="art"> <img class="conta" src="../../images/hemlockkaki.png"/> </td>
+					<td class="art"> <p class="int"> Hemlock Kaki </p>
+					<p class="detail"> Une pièce utilitaire pour l'amateur de plein air, l'aventurier - lié, le toujours préparé. Un revêtement luttant parfaitement contre la météo et des poches utiles donnant à cette veste un charme particulier. Sa doublure en coton vous maintiendra au chaud malgré les températures les plus basses. </p> </td>
 				</tr>
 				<tr>
-					<td id="art"> 150 € </td>	
+					<td class="art"> 150 € </td>	
 				</tr>
 
 		
 			</table>
+			</div>
+			<div>
 			<fieldset>
 			<legend> Taille et Quantité </legend>
 				<ol>
-				<select id="quantitetaille" name="taille">
+				<select class="quantitetaille" name="taille">
 					<option value="Homme"> S </option>
 					<option value="Femme"> M </option>
 					<option value="Secret"> L </option>
 					<option value="Autre"> XL </option>
 				</select>
-				<select id="quantitetaille" name="quantite">
+				<select class="quantitetaille" name="quantite">
 					<option value="1"> 1 </option>
 					<option value="2"> 2 </option>
 					<option value="3"> 3 </option>
 				</select>
 				</ol>
 			</fieldset>
+			</div>
+			<div>
 			<p><a href="../../validpanier.html"><button> Ajouter au panier </button></a></p>
 			<p><a href="../veste.html"><button> Retour aux vestes </button></a></p>
-			<div id="imart">
+			</div>
+			<div class="imart">
 			<table>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 2431 </p> </td>
 				<td> <p> Chère, mais aujourd'hui la qualité se paye, foncez, une valeur sûre ! </p> </td>
 			</tr>
-			<tr id="comart">
+			<tr class="comart">
 				<td> <p> Utilisateur 8736 </p> </td>
 				<td> <p> Très déçu, beaucoup trop chère pour la qualité, la veste a tenu seulement 1 mois ! Honteux ! </p> </td>
-			</tr id="comart">
+			</tr>
 
 			</div>
 			</table>
+			<div>
 			<table>
 			<tr>
-				<td><button>Ajouter un commentaire</button></td>
+				<td><a href="../../commentaire.html"><button>Ajouter un commentaire</button></a></td>
 			</tr>
 			</table>
+			</div>
 			</section>
+		</div>
 	</body>
 </html>
